fix: :bug: Correct layout issues on mobile devices

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
-#about {
+/* #about {
   gap: 3rem;
-}
+} */
 
 .about__content {
   display: flex;
