--- a/assets/css/analytics.css
+++ b/assets/css/analytics.css
@@ -1,6 +1,6 @@
-#analytics {
+/* #analytics {
   gap: 3rem;
-}
+} */
 
 .analytics__list {
   padding: 0 2rem;
